--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.InstagramClone"
         tools:targetApi="31">
         <activity
+            android:name=".AddPostActivity"
+            android:exported="false"
+            android:theme="@style/Theme.InstagramClone" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
